# case-datasus

./: 404.html  Makefile  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
about-datasus/: index.html
analysis-antipsychotics/: index.html
analysis-her2/: index.html
analysis-immunotherapy/: index.html
analysis-survival/: index.html
case_datasus/: 001-rb-install-pysus.sh  002-rb-download-manual-bases-tecnicas-oncologia copy.sh  003-rb-download-informe-tectnico.sh  004-rb-download-municipio.sh  005-rb-download-cid-categ.sh  005-rb-download-cid-subcateg.sh  006-rb-download-motivo-saida.txt
dashboard-apac-am/: index.html
dashboard-apac-aq/: index.html
docs/: mkdocs.yml
docs/docs/: 001-about-datasus.md  001-getting-started.md  002-etl-process.md  009-sup-tables.md  010-dashboard-chemotherapy.md  011-dashboard-apac-drugs.md  011-limitations-considerations.md  099-project-organization.md  about-datasus.md  analysis-antipsychotics.md  analysis-her2.md  analysis-immunotherapy.md  analysis-survival.md  dashboard-apac-am.md  dashboard-apac-aq.md  etl-process.md  index.md  (+3 more)
etl-process/: index.html
limitations-considerations/: index.html
notebooks/: 001-rb-APACquimio-ETL.ipynb  001-rb-ETL.ipynb  002-rb-APACquimio-sanity.ipynb  003-rb-APACdrugs-ETL.ipynb  004-rb-APACdrugs-sanity copy.ipynb  005-rb-HER2-oportunity.ipynb  006-rb-antipsychotic-oportunity.ipynb  007-rb-immuno-oportunity.ipynb  007-rb-imuni-oportunity.ipynb  008-rb-SIH-ETL.ipynb  008-rb-survival_analysis.ipynb
project-organization/: index.html
sup-tables/: index.html
