[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "case_datasus"
version = "0.0.1"
description = "DataSUS case"
authors = [
  { name = "Rodrigo Barreiro" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["case_datasus"]
include = ["pyproject.toml", "case_datasus/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["case_datasus"]
force-sort-within-sections = true

